# ChangeLog for x11-wm/i3
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/i3/ChangeLog,v 1.16 2012/03/24 16:57:39 phajdan.jr Exp $

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> i3-4.1.2-r1.ebuild:
  x86 stable wrt bug #407895

  13 Mar 2012; Agostino Sarubbo <ago@gentoo.org> i3-4.1.2-r1.ebuild:
  Stable for amd64, wrt bug #407895

*i3-4.1.2-r1 (12 Mar 2012)

  12 Mar 2012; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.1.2-r1.ebuild,
  -i3-4.1.2.ebuild:
  Install session file in /etc/X11/Sessions wrt bug 407493 by Paweł Rumian
  <gorkypl@gmail.com>

*i3-4.1.2 (28 Jan 2012)

  28 Jan 2012; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.1.2.ebuild:
  Version bump, fixes bug 401179 by Ondrej Grover <ondrej.grover@gmail.com>

  09 Jan 2012; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.1.ebuild,
  i3-4.1.1.ebuild:
  Remove obsolete dependencies wrt #398191. Thanks to max <ablepharus@gmail.com>
  for the report. Drop old

*i3-4.1.1 (24 Dec 2011)

  24 Dec 2011; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.1.1.ebuild:
  Version bump

*i3-4.1 (12 Nov 2011)

  12 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org>
  -files/i3-4.0.1-gentoo-r1.diff, -i3-4.0.2-r1.ebuild, +i3-4.1.ebuild:
  Version bump wrt #390239 by Simeon Maryasin. Drop versionator and base
  eclasses, add new deps on startup-notification and libpcre. Drop old

*i3-4.0.2-r1 (10 Oct 2011)

  10 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.0.2.ebuild,
  +i3-4.0.2-r1.ebuild:
  Add x11-libs/libXcursor as a dependency wrt bug #385617 by <spam@k-progs.org>

*i3-4.0.2 (28 Aug 2011)

  28 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.0.1-r2.ebuild,
  +i3-4.0.2.ebuild:
  Version bump, drop old

*i3-4.0.1-r2 (04 Aug 2011)

  04 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.0.1-r1.ebuild,
  +i3-4.0.1-r2.ebuild:
  Add last missing man

*i3-4.0.1-r1 (03 Aug 2011)
