@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST i3-4.1.1.tar.bz2 563305 RMD160 e840737fa0823bbb807807eca72c9337c1470ffe SHA1 79c919b7cde24afe5b7cb5eb4c96f3503c9142f3 SHA256 bd0159e0f2ee4fe2864464ca0b8ae17a88c545cb0601a3e63a8d5de754587c1a
 DIST i3-4.1.2.tar.bz2 562976 RMD160 960e0e5dc0771eed57af361e56ae69ee8a0a8f0f SHA1 1f6818539f3c5810502af2fa7403df4443611a53 SHA256 12e51bf34cbfaae00fb54c98d75d6d7b182b08883cd515bff04d544d141d4c40
-EBUILD i3-4.1.1.ebuild 999 RMD160 520e0bee3870169f35b0da020c590d9effc2a84f SHA1 e7743302a720537e438317222ca4ae5d9d0ab1ff SHA256 adb722c0787ab7f01242a9ee40953578aa3f2115e462421b59269266b53e0e8f
+DIST i3-4.2.tar.bz2 758109 RMD160 43122121c7c865b7ad07c68a090dc4b3eb307b70 SHA1 9d6b8b01dd5d53ee51456f6f8df0773f355de5f0 SHA256 e02c832820e8922a44e744e555294f8580c2f8e218c5c1029e52f1bde048732b
 EBUILD i3-4.1.2-r1.ebuild 1110 RMD160 74af8d4ffdf8f79c8e1d1ba30b4a9ff45666c1db SHA1 e725a7f41e464a2321d498c9cfdd90f556cd7b0f SHA256 5a3b79939072431d173a0bea6b11c5777f149c56001189af9f9fa76fbf4518db
-MISC ChangeLog 3182 RMD160 6ea0ed75d22701deacee44017dbcf65bca5ed72f SHA1 0882570ee62ee000b82b14d0de1e9ae375231480 SHA256 4c32e8909f0f6db44ff79ca4921c05653b645c23ba45f36f7e89ada36a4e79fd
+EBUILD i3-4.2.ebuild 1123 RMD160 3d28c93ae46e7a42b65c61e7a6b6c795c228aa3e SHA1 531634d0e59494be6b5517368d65176b7800a3e5 SHA256 1f73726f503ca9e92f9a51f3ee2bd8a695518839cf8fb8df2465e7f6ad7564a2
+MISC ChangeLog 3321 RMD160 7ac20516996c878b62defa0df575fbd6dab29735 SHA1 c64540f8a2987aa460c984e5d8621eb4401fc05a SHA256 9a202428ac546c9af5fbd2c595f6fa1a68a38464345104bf907c3400801c89d3
 MISC metadata.xml 262 RMD160 5fa004a3927201d509adf4583c80fcea57d845cb SHA1 7d07024bbe476df939b23a4552ec9a403ec8fff7 SHA256 9efce27cc1c3955b252cc5b7272629cd5b66260849fd9e5a5fae9e420a1829d9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEUEAREKAAYFAk9t/QwACgkQuUQtlDBCeQIAtACYutZi6Ark8gPMnazFBOl+WZy/
-XgCfZePpxZpP5vejCf1qFccytC60f0A=
-=fR9g
+iQIcBAEBCAAGBQJPmQmCAAoJEF0huFKJUZL5HcYP/0/0x06ysh/6OWwzR4axKYSD
+s4tr0F6DpJjPhcHzUwzb8vs9SvZOBWBZWFSDUYUzdR0tFr7RIAGLE8cFJdCI/sDC
+AcY8vEP7XET0GAcqezHQ7zBd1sg+8IW3DX/crDHUpC8PSrR7SyEoptyywKDAgoqY
+KvDcC6iIWGtY6uNKkSw4xyL0ItK6nLjL7jTgdK/S09Q3b+xXINvFVmqvWxktcF3Z
+seyfGa/ekICTsbQJHZety0sx6leUnlSLmqHQQpC0YZVwjYjVgAOMU9W69ybYfKw7
+eBuooV/LuVEQ+L6+WbrYz/JxuQ5Smi7zvL85Q+xmw7vfCcNEyog8eu+xbk1DPNK9
+NqP85UsDsXCdyJ1cvnwYZGWLuXoUgVwlzDczZsoJnFL7WuMYQCmkF4Xp+bTSP/sc
+cjyVVwZDic8KAWWB9LpAy8ZltUw/BsM9889NCShxhkJWQVVZnVsvPXzzKN7rvl6D
+FS/zBplGb5OmUExE6jdni52V/L5wZCZb2zv3nI0VTaaOfq2UINgiFY6lbmAMZV49
+DCdDJqnDeRev0jMFSR1TLNqqE11+foGUuUoiXr+u85hfyMOqFiSJ+klnxaJeTLCn
+p6n+6VAeijRPUZh3W4NBVUVUP+XjokNR/tbfL1OMezvOfmoScnuNCZasZ08WvB4x
+QtwPKHTY0wEAYisww0cM
+=Cvsx
 -----END PGP SIGNATURE-----
