@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/i3
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/i3/ChangeLog,v 1.16 2012/03/24 16:57:39 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/i3/ChangeLog,v 1.17 2012/04/26 08:37:52 xarthisius Exp $
+
+*i3-4.2 (26 Apr 2012)
+
+  26 Apr 2012; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.2.ebuild,
+  -i3-4.1.1.ebuild:
+  Version bump, drop old
 
   24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> i3-4.1.2-r1.ebuild:
   x86 stable wrt bug #407895
